css/style.css
/* ... */
.single_item {
    margin-bottom: 30px;
}

.single_item img{
    width: 100%;
    transition: all ease 0.3s;
}

.single_item img:hover {
  background: #ffffff;
  transition: all ease 0.3s;
  box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3);
  top: -5px;
}

.select-cat{
    color:#000 !important;
}

.popup-youtube {
    position: relative;
}

.popup-youtube i{
    position: absolute;
    text-align: center;
    top: 50%;
    left: 50%;
    background: rgba(0, 0, 0, 0.66);
    padding: 28px 29px;
    color: #fff;
    margin: -31px;
    border-radius: 50px;
    -webkit-border-radius: 50px;
    -moz-border-radius: 50px;
}


/*--------------------- Certifications --------------------*/
.certificate_item img{
    width: 100%;
    height: 100%;
    
}

.certificate_item img:hover {
    background: #ffffff;
    transition: all ease 0.3s;
    box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3);
    top: -5px;
  }

.certificate_item{
    font-size: 15px;
    color: #000000;
    font-family: 'Poppins', sans-serif;
    text-align: center;
    
    
}



/*------------------------ Experience -------------------*/


.exp{
    padding:15px;
}
.experience_label h2 {
    font-size: 20px;
    font-family: 'Poppins';
    font-weight: bold;
    color: #000000;
       
}
.experience_text {
    font-family: 'Poppins';
    margin-top: 10px;
    color: #000000;
    text-align: justify;
}
.experience_text h2 {
    font-weight: bold;
    color: #000000;
}
.experience_text ul{
    margin-left: 14px;
    color: #000000;
    padding-top: 5px;
    text-align: justify;
}
.exp_date{
    margin-left: 1.5px;
    margin-top: 1px;
    color: #000000;
    padding-top: 5px;
}
.text{
    font-size: 16px;
    font-style: italic;
    font-family: 'Poppins';
    color: #000000;
    padding-top: 10px;
    
    
}




/*------------------------ 5 Blog ------------------------*/

/*.blog-image img{
    width: 100%;
}

.blog-content{
    margin-bottom:60px;
}

.blog h1{
    font-size: 20px;
    line-height: 24px;
    margin: 25px 0 13px 0;
    color: #000;
    font-family: 'Montserrat', sans-serif;
}

.blog-info{
    font-size: 12px;
    font-weight: 400;
    color: #b9b9b9;
    margin-top: 20px;
    display: inline-block;
}

.blog .site-button{
    margin:0 auto 60px;
    display: table;
}

.blog-single h1 {
     font-size: 22px;
    line-height: 24px;
    margin: 25px 0 12px 0;
    color: #000;
    font-weight: bold;
    font-family: 'Montserrat', sans-serif;
}

.blog-single .blog-detail{
    font-size: 13px;
    color: #b9b9b9;
    margin-bottom: 30px;
}

.blog-single .blog-detail span{
    color: #000;
}

.blog-single blockquote {
    font-family: 'Montserrat', sans-serif;
    font-size: 14px;
    line-height: 24px;
    color: #000;
    border-left: 4px solid #000;
    padding-left: 20px;
    margin: 40px 0;
}

.blog-single ul.list-style {
    padding: 30px;
    line-height: 24px;
}

.blog-single ul.list-style li {
    font-size: 14px;
    list-style: circle;
}

.lightbox-image img{
    width: 100%;
    padding-bottom: 30px;
}

.blog-single .post-lightbox{
    padding: 30px 0 0;
 }

.subtitle {
     font-size: 22px;
    line-height: 24px;
    margin: 25px 0 30px 0;
    color: #000;
    font-weight: bold;
    font-family: 'Montserrat', sans-serif;
}

.post-comment {
    float: left;
}

ul.post-comment li {
    width: 100%;
    float: left;
    border-bottom: 1px solid #efefef;
    padding: 15px 0;
    list-style: none;
}

ul.post-comment li img {
    width: 15%;
    float: left;
}

ul.post-comment li .comment-info {
    float: left;
    width: 85%;
    padding-left: 15px;
        margin-top: 15px;
}


ul.post-comment li h3 {
    float: left;
    font-size: 14px;
}

ul.post-comment li a {
    float: right;
    font-size: 11px;
    font-weight: bold;
    color: #000;
}

ul.post-comment li span {
    float: left;
    width: 100%;
    font-size: 12px;
    color: #c5c5c5;
    margin-top: 3px;
}

ul.post-comment li p {
    font-size: 12px;
    line-height: 20px;
    float: left;
    margin-top: 6px;
}

.send-message{
    margin-top:60px !important;
}

.send-message .subtitle{
    margin-bottom:30px;
}*/



/*------------------------ 5 Contact ------------------------


.contact-info{
    text-align: center;
}

.contact-info i{
    width: 60px;
    height: 60px;
    text-align: center;
    background: #000;
    border-radius: 50px;
    color: #fff;
    padding-top: 20px;
    font-size: 20px;
    margin-bottom: 15px;
}

.contact-info p{
    line-height: 20px;
}

.section-title p{
    margin-top:20px;
}

.form-inp {
    width: 100%;
    height: 45px;
    border: 0;
    color: #000;
    border-bottom: solid 1px #dfdfdf;
    font-size: 13px;
    padding-left: 10px;
    margin-bottom: 15px;
    font-family: 'Poppins', sans-serif;
}

.contact-form textarea {
       width: 100%;
    border: 0;
    border-bottom: solid 1px #dfdfdf;
    font-size: 13px;
    padding: 20px 0 0 10px;
    height: 119px;
    margin-bottom: 15px;
    font-family: 'Poppins', sans-serif;
}

.contact-form{
    margin-top: 90px;
}

.contact-form .site-button{
    margin: auto;
    margin-top: 30px;
    display: block;
}

.button{
    text-align: center;
    padding: 45px 0;
}

.site-button{
    padding: 10px 50px;
    font-size: 12px;
    background: none;
    border: 2px solid;
    border-radius: 50px;
    -moz-border-radius: 50px;
    -webkit-border-radius: 50px;
    transition: all ease 0.3s;
}

a.site-button{
    border: 2px solid #000;
    color: #000;
}

.site-button:hover{
    background: #000;
    color: #fff;
    transition: all ease 0.3s;
}*/




/*------------------------ 6 Responsive ------------------------*/


/*max Width 992px */

@media screen and (max-width: 991px) {

    .home-content h1{
        font-size: 50px;
    } 
    
     .what-can .feature{
        padding: 0 30px;
    }
    
    .about.type-1 .about-image{
        background: none;
    }
    
    .about.type-1 .about-image img{
        margin: 0;
    }
    
}
/* ... */

